--- a/static/job_page_spa.html
+++ b/static/job_page_spa.html
@@ -13,7 +13,7 @@
             <h1 class="display-5 mb-5"><strong> Kukusiki Careers</strong></h1>
         </div>
         <div class="main row justify-content-center">
-            <form action="" id="jobs-form" class="row justify-content-center mb-4" autocomplete="off">
+            <form action="#" id="jobs-form" class="row justify-content-center mb-4" autocomplete="off">
                 <div class="col-15 mb-3">
                     <label for="name">Name</label>
                     <input class="form-control" id="personalName" type="text" placeholder="Name">
@@ -61,6 +61,6 @@
             </div>
         </div>
     </div>
-<script src="script.js"></script>
+<script src="script_spa.js"></script>
 </body>
 </html>
