--- a/static/job_page_spa.html
+++ b/static/job_page_spa.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Kukusiki Careers</title>
+    <title>Company vacancies</title>
 </head>
 <body>
     <div class="container mt-5">
         <div class="text-center">
-            <h1 class="display-5 mb-5"><strong> Kukusiki Careers</strong></h1>
+            <h1 class="display-5 mb-5"><strong> Company vacancies</strong></h1>
         </div>
         <div class="main row justify-content-center">
             <form action="#" id="jobs-form" class="row justify-content-center mb-4" autocomplete="off">
